--- a/Run_SINGAN.ipynb
+++ b/Run_SINGAN.ipynb
@@ -9,7 +9,8 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "language": "python"
     },
     "accelerator": "GPU"
   },
@@ -49,6 +50,102 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def _distance_cost(img_dimensions):\n",
+        "\n",
+        "  if not img_dimensions :\n",
+        "    print(\"returning zerooo\")\n",
+        "    return 0\n",
+        "  x,y = img_dimensions\n",
+        "  line = torch.FloatTensor(range(x)).reshape(-1,1)\n",
+        "  column = torch.FloatTensor(range(y)).reshape(1,-1)\n",
+        "\n",
+        "  a = line.repeat(1,y)\n",
+        "  b =column.repeat(x,1)\n",
+        "  cost = a+b\n",
+        "  print(\"Transport cost shape\",cost.size())\n",
+        "  return cost.divide(x+y)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.0000, 0.0500, 0.1000, 0.1500, 0.2000, 0.2500, 0.3000, 0.3500, 0.4000,\n",
+              "         0.4500],\n",
+              "        [0.0500, 0.1000, 0.1500, 0.2000, 0.2500, 0.3000, 0.3500, 0.4000, 0.4500,\n",
+              "         0.5000],\n",
+              "        [0.1000, 0.1500, 0.2000, 0.2500, 0.3000, 0.3500, 0.4000, 0.4500, 0.5000,\n",
+              "         0.5500],\n",
+              "        [0.1500, 0.2000, 0.2500, 0.3000, 0.3500, 0.4000, 0.4500, 0.5000, 0.5500,\n",
+              "         0.6000],\n",
+              "        [0.2000, 0.2500, 0.3000, 0.3500, 0.4000, 0.4500, 0.5000, 0.5500, 0.6000,\n",
+              "         0.6500],\n",
+              "        [0.2500, 0.3000, 0.3500, 0.4000, 0.4500, 0.5000, 0.5500, 0.6000, 0.6500,\n",
+              "         0.7000],\n",
+              "        [0.3000, 0.3500, 0.4000, 0.4500, 0.5000, 0.5500, 0.6000, 0.6500, 0.7000,\n",
+              "         0.7500],\n",
+              "        [0.3500, 0.4000, 0.4500, 0.5000, 0.5500, 0.6000, 0.6500, 0.7000, 0.7500,\n",
+              "         0.8000],\n",
+              "        [0.4000, 0.4500, 0.5000, 0.5500, 0.6000, 0.6500, 0.7000, 0.7500, 0.8000,\n",
+              "         0.8500],\n",
+              "        [0.4500, 0.5000, 0.5500, 0.6000, 0.6500, 0.7000, 0.7500, 0.8000, 0.8500,\n",
+              "         0.9000]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ],
+      "source": [
+        "import torch\n",
+        "\n",
+        "def _distance_cost(im_dimensions):\n",
+        "\n",
+        "    x,y = im_dimensions\n",
+        "    line = torch.FloatTensor(range(x)).reshape(-1,1)\n",
+        "    column = line.T\n",
+        "\n",
+        "    a = line.repeat(1,y)\n",
+        "    b =column.repeat(x,1)\n",
+        "    cost = a+b\n",
+        "    \n",
+        "    return cost.divide(x+y)\n",
+        "\n",
+        "_distance_cost(10,10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1., 2.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ],
+      "source": [
+        "a = (1,2)\n",
+        "torch.FloatTensor(a).to(\"cpu\")"
       ]
     },
     {
@@ -545,9 +642,7 @@
       "metadata": {
         "id": "L70NgQC_voH1"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
