NOT SAFE: new implementation of pixel distance matrix

--- a/Run_SINGAN.ipynb
+++ b/Run_SINGAN.ipynb
@@ -64,6 +64,7 @@
         "    print(\"returning zerooo\")\n",
         "    return 0\n",
         "  x,y = img_dimensions\n",
+        "  \n",
         "  line = torch.FloatTensor(range(x)).reshape(-1,1)\n",
         "  column = torch.FloatTensor(range(y)).reshape(1,-1)\n",
         "\n",
@@ -71,81 +72,199 @@
         "  b =column.repeat(x,1)\n",
         "  cost = a+b\n",
         "  print(\"Transport cost shape\",cost.size())\n",
-        "  return cost.divide(x+y)"
+        "  return cost.divide(x+y).to(\"cuda:0\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 4,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2025, 2025])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
+      "source": [
+        "import torch\n",
+        "def _pixel_distance_cost(img_dimensions):\n",
+        "\n",
+        "    if not img_dimensions :\n",
+        "        print(\"returning zerooo\")\n",
+        "        return 0\n",
+        "\n",
+        "    x,y = img_dimensions\n",
+        "    li = []\n",
+        "    \n",
+        "    for j in range(y):\n",
+        "        for i in range(x):\n",
+        "            line = torch.abs(torch.FloatTensor(torch.range(x))-i).reshape(-1,1)\n",
+        "            column = torch.abs(torch.FloatTensor(torch.range(y))-j).reshape(1,-1)\n",
+        "            a = line.repeat(1,y)\n",
+        "            b =column.repeat(x,1)\n",
+        "            cost = a+b\n",
+        "            #print(\"Transport cost shape\",cost.size())\n",
+        "            cost = cost.divide(x+y).reshape(-1)\n",
+        "            li.append(cost)\n",
+        "\n",
+        "    return torch.stack(li,dim=0)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "px_dist =_pixel_distance_cost((45,45))\n",
+        "px_dist.size()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 59,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "unsupported operand type(s) for -: 'range' and 'int'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-59-6516f202f1a3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'range' and 'int'"
+          ]
+        }
+      ],
+      "source": [
+        "range(10)-5"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[0.0000, 0.0500, 0.1000, 0.1500, 0.2000, 0.2500, 0.3000, 0.3500, 0.4000,\n",
-              "         0.4500],\n",
-              "        [0.0500, 0.1000, 0.1500, 0.2000, 0.2500, 0.3000, 0.3500, 0.4000, 0.4500,\n",
-              "         0.5000],\n",
-              "        [0.1000, 0.1500, 0.2000, 0.2500, 0.3000, 0.3500, 0.4000, 0.4500, 0.5000,\n",
-              "         0.5500],\n",
-              "        [0.1500, 0.2000, 0.2500, 0.3000, 0.3500, 0.4000, 0.4500, 0.5000, 0.5500,\n",
-              "         0.6000],\n",
-              "        [0.2000, 0.2500, 0.3000, 0.3500, 0.4000, 0.4500, 0.5000, 0.5500, 0.6000,\n",
-              "         0.6500],\n",
-              "        [0.2500, 0.3000, 0.3500, 0.4000, 0.4500, 0.5000, 0.5500, 0.6000, 0.6500,\n",
-              "         0.7000],\n",
-              "        [0.3000, 0.3500, 0.4000, 0.4500, 0.5000, 0.5500, 0.6000, 0.6500, 0.7000,\n",
-              "         0.7500],\n",
-              "        [0.3500, 0.4000, 0.4500, 0.5000, 0.5500, 0.6000, 0.6500, 0.7000, 0.7500,\n",
-              "         0.8000],\n",
-              "        [0.4000, 0.4500, 0.5000, 0.5500, 0.6000, 0.6500, 0.7000, 0.7500, 0.8000,\n",
-              "         0.8500],\n",
-              "        [0.4500, 0.5000, 0.5500, 0.6000, 0.6500, 0.7000, 0.7500, 0.8000, 0.8500,\n",
-              "         0.9000]])"
+              "tensor([[1],\n",
+              "        [2],\n",
+              "        [3],\n",
+              "        [4],\n",
+              "        [5],\n",
+              "        [6],\n",
+              "        [7],\n",
+              "        [8],\n",
+              "        [9]])"
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 58
+        }
+      ],
+      "source": [
+        "t = torch.tensor([[1,2,3],[4,5,6],[7,8,9]])\n",
+        "t.reshape(-1,1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.6000, 0.7000, 0.3000, 0.4000, 0.5000],\n",
+              "        [0.7000, 0.8000, 0.4000, 0.5000, 0.6000],\n",
+              "        [0.3000, 0.4000, 0.0000, 0.1000, 0.2000],\n",
+              "        [0.4000, 0.5000, 0.1000, 0.2000, 0.3000],\n",
+              "        [0.5000, 0.6000, 0.2000, 0.3000, 0.4000]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ],
+      "source": [
+        "roll(a,shifts=(2,2),dims=(0,1))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 54,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([2, 1, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ],
+      "source": [
+        "a = torch.abs((torch.tensor([1,2,3])-3))\n",
+        "a"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[9, 7, 8],\n        [3, 1, 2],\n        [6, 4, 5]])\n"
+          ]
         }
       ],
       "source": [
         "import torch\n",
         "\n",
-        "def _distance_cost(im_dimensions):\n",
         "\n",
-        "    x,y = im_dimensions\n",
-        "    line = torch.FloatTensor(range(x)).reshape(-1,1)\n",
-        "    column = line.T\n",
+        "def roll_x(m,n): return torch.cat((m[:n],m[:-n]),dim=0)\n",
         "\n",
-        "    a = line.repeat(1,y)\n",
-        "    b =column.repeat(x,1)\n",
-        "    cost = a+b\n",
-        "    \n",
-        "    return cost.divide(x+y)\n",
+        "def roll_y(m,n): return torch.cat((m[:,:n],m[:,:-n]),dim=1)\n",
         "\n",
-        "_distance_cost(10,10)"
+        "def roll2(m,x,y): return roll_y(roll_x(m,x),y)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([1., 2.])"
+              "tensor([[0.0000, 0.0000, 0.1000, 0.2000, 0.3000],\n",
+              "        [0.0000, 0.0000, 0.1000, 0.2000, 0.3000],\n",
+              "        [0.1000, 0.1000, 0.2000, 0.3000, 0.4000],\n",
+              "        [0.2000, 0.2000, 0.3000, 0.4000, 0.5000],\n",
+              "        [0.3000, 0.3000, 0.4000, 0.5000, 0.6000]])"
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 50
         }
       ],
       "source": [
-        "a = (1,2)\n",
-        "torch.FloatTensor(a).to(\"cpu\")"
+        "roll2(a,1,1)"
       ]
     },
     {
